profile img scaled down, location img add aspect ratio, new projects.json data, project host tag, project fixed miss alignments

--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -1,8 +1,8 @@
 .projects {
   display: flex;
   flex-wrap: wrap;
-  justify-content: stretch;
-  align-items: flex-start;
+  /* justify-content: stretch;
+  align-items: flex-end; */
 }
 .project {
   border-bottom: 1px solid whitesmoke;
